--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://hivejiveio.github.io
-baseurl: /hivejive-io/
+url: https://technicallybeekeeping-com.github.io
+baseurl: /technicallybeekeeping-com/
 
 # Site settings
-title: Hive Jive
+title: Technically Beekeeping
 email: admin@technicallybeekeeping.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Beekeeping innovations"
 
 
 # Team names, titles and social links
@@ -44,12 +44,12 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
+  - title: youtube
+    url: https://www.youtube.com/@technicallybeekeeping
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
+    url: https://www.facebook.com/profile.php?id=61555157813225
+  - title: linkedin
+    url: 
   - title: github
     url: http://github.com/TechnicallyBeekeeping
 
