Fix Github pages url

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://technicallybeekeeping-com.github.io
+url: https://technicallybeekeeping.github.io
 baseurl: /technicallybeekeeping-com/
 
 # Site settings
